--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -56,6 +56,7 @@ height:25rem;
 .ul{
   padding: 0.75rem;
   color:white;
+  font-family: Helvetica;
   list-style-type: none;
   display:flex;
   align-items:center;
